--- a/tasks/leaderboard_it/ifeval_it/ifeval.yaml
+++ b/tasks/leaderboard_it/ifeval_it/ifeval.yaml
@@ -1,11 +1,8 @@
-task: leaderboard_ifeval_it
+task: itabench_leaderboard_ifeval_it
 
 ## DATASET ##
 dataset_name: null
-#dataset_path: mii-llm/ifeval-ita
-dataset_path: json
-dataset_kwargs:
-  data_files: dataset/ifeval/ifeval_ita_fixed.train.json
+dataset_path: MinervaV2/ifeval_ita_fixed
 test_split: train
 
 ## PROMPT & ANSWERING ##
